syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.imbd.spbau.proto";
option java_outer_classname = "ProtoMessenger";

package messenger;

service Messenger {
    rpc MessagesExchange(stream ProtoMessage) returns (stream ProtoMessage) {}
    rpc TypingNotification(stream ProtoMessage) returns (stream ProtoMessage) {}
}

message ProtoMessage {
    int32 type = 1;
    string text = 2;
}